# wh40k-sim

./: .gitignore  README.md  open_issues.md  pyproject.toml
examples/: basic.py  keywords.py
tests/: test_simulate.py
wh40k_sim/: __init__.py  profiles.py  simulate.py
